--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-pandas==1.4.4
-numpy==1.21.5
-seaborn==0.11.2
-matplotlib==3.5.2
-scikit-learn==1.0.2
-imbalanced-learn==0.11.0
+pandas==2.1.3
+numpy==1.26.2
+seaborn==0.13.0
+matplotlib==3.8.2
+scikit-learn==1.5.0
+ipykernel
+imbalanced-learn
+plotly-express==0.4.1
+shapely==2.0.2
+#geoplot==0.14.1
+geopandas
